--- a/src/App.css
+++ b/src/App.css
@@ -1,90 +1,17 @@
-.App {
-  display: flex;
-  justify-content: center;
-  margin-top:150px;
+.forms {
+  margin: auto;
+  width: 350px;
+  padding: 10px;
 }
-
-.form-control {
-  margin-bottom: 20px;
+.jumbotron {
+  padding:70px 30px 70px 30px;
+  margin:0px auto;
+  background: #fff;
 }
-.formSubmit{
-  margin-top:10px;
+.nav-link{
+  color:floralwhite;
 }
-.Upload {
-  text-align: center;
-  max-width: 100vw;
-  min-height: 100vh;
-  max-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.Upload .left-side {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-right: .5px solid grey;
-}
-
-.Upload .right-side {
-  border-left: .5px solid grey;
-}
-
-.Upload .left-side,
-.Upload .right-side {
-  height: 300px;
-  width: 100%;
-}
-
-.Upload .left-side form {
-  height: fit-content;
-  background: white;
-  border: 1px solid grey;
-  border-radius: 4px;
-  width: 300px;
-  padding: 40px 10px;
-}
-
-.Upload .left-side form input {
-  margin: 0 0 30px;
-  width: 200px;
-}
-
-.Upload .left-side form .btn {
-  height: 40px;
-  width: 200px;
-  background: white;
-  border: 1px solid grey;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.Upload .left-side form .btn:hover {
-  color: white;
-  background: grey;
-}
-
-.Upload .left-side form .btn:focus {
-  box-shadow: none;
-  outline: none;
-}
-
-.Upload .left-side form .btn.widget-btn {
-  margin-top: 15px;
-  background: #800080;
-  border: 1px solid #800080;
-  color: #FFFFFF;
-}
-
-.Upload .left-side form .btn.widget-btn:hover {
-  margin-top: 15px;
-  background: #4B0082;
-  border: 1px solid #4B0082;
-  color: #FFFFFF;
-}
-
-.Upload .right-side .displayed-image {
-  height: 300px;
-  width: 300px;
-}
+.nav-link:hover{
+   color: #fff !important;
+   text-decoration: none;
+  }
